# Semantic-Search

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
docs/: DEV.md  TELEGRAM.md
scripts/: bump-version.sh  fix-ext.py
semantic-search/: Cargo.toml  README.md
semantic-search-cli/: Cargo.toml  README.md
semantic-search-cli/src/: config.rs  lib.rs  main.rs  util.rs
semantic-search-cli/src/commands/: embed.rs  index.rs  mod.rs  search.rs  serve.rs  telegram.rs
semantic-search-cli/src/commands/telegram/: common.rs  inline.rs  message.rs  mod.rs
semantic-search/src/: api.rs  embedding.rs  error.rs  lib.rs  silicon_flow.rs
