[workspace]
resolver = "2"
members = ["semantic-search", "semantic-search-cli"]

[workspace.package]
authors = ["PRO-2684"]
categories = ["command-line-utilities", "development-tools"]
edition = "2024"
include = ["/src", "README.md"]
keywords = ["search", "semantic", "embedding"]
license = "GPL-3.0-or-later"
repository = "https://github.com/PRO-2684/Semantic-Search"
version = "0.1.5"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
doc_for = "0.1.4"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
codegen-units = 1  # Set the number of codegen units to 1.
