[package]
name = "semantic-search-cli"
description = "🔎 Semantic search cli."
authors.workspace = true
categories.workspace = true
edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
base16ct = { version = "0.2.0", features = ["alloc"] }
doc_for.workspace = true
env_logger = "0.11.8"
frankenstein = { version = "0.43.0", features = ["client-reqwest"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
image = { version = "0.25.6", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
log = "0.4.27"
semantic-search = { path = "../semantic-search", version = "0.1.0" }
serde.workspace = true
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.46.1", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.9.2"

[[bin]]
name = "sense"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
