[package]
name = "semantic-search"
version = "0.1.1"
edition = "2021"
include = ["/src", "README.md"]
description = "🔎 Semantic search library."
license = "GPL-3.0-or-later"
repository = "https://github.com/PRO-2684/Semantic-Search"
keywords = ["search", "semantic", "library"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt"] }
