[package]
name = "semantic-search"
include = ["/src", "README.md"]
description = "🔎 Semantic search library."
keywords = ["search", "semantic", "library"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { workspace = true }
serde_json = "1.0.139"
thiserror = "2.0.11"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt"] }
