[package]
name = "semantic-search"
description = "🔎 Semantic search library."
authors.workspace = true
categories.workspace = true
edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22.1"
doc_for.workspace = true
reqwest = { version = "0.12.12", features = ["json"] }
serde.workspace = true
serde_json = "1.0.139"
thiserror = "2.0.11"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt"] }
